--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <meta name="Description" content="Information and resources about COVID for the State of South Carolina">
   <base href="/">
   <link rel='manifest' href='./src/manifest.json'>
-  <link rel="shortcut icon" href="./favicon.png" />
+  <link rel="shortcut icon" href="/favicon.png" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <style>
     html,
